--- a/css/styles.css
+++ b/css/styles.css
@@ -104,7 +104,7 @@ body {
 
 @media (min-width: 768px) {
     #search-form {
-        min-width: 50%;
+        width: 50%;
         margin: 0;
     }
 }
@@ -127,4 +127,19 @@ body {
 
 #search-form input::placeholder {
     color: #FFF;
+}
+
+
+/* BOTTOM NAVBAR */
+#bottom-navbar-container .container { /* coloca o menu hamburguer para o canto direito no mobile */
+    justify-content: flex-end;
+}
+
+#bottom-navbar-container a {
+    font-weight: 600;
+    color: #FFF;
+}
+
+#navbar-toggler {
+    font-size: 1.5em;
 }
