--- a/css/styles.css
+++ b/css/styles.css
@@ -177,3 +177,62 @@ body {
         font-size: 4em;
     }
 }
+
+/* MINI BANNERS */
+
+#mini-banners {
+    margin-top: -3em;
+    z-index: 10; /* Altera o posicionamento do elemento no eixo Z que seria a profundidade. Aumentando, jogando o elemento para frente. Que consequentemente, fica por cima do slide. */
+}
+
+#mini-banners .col-12 {
+    z-index: 1;
+    height: 300px;
+    padding: 1.5em;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+@media (min-width: 768px) {
+    #mini-banners .col-12 {
+        max-width: 30%;
+    }
+}
+
+#mini-banners .col-12 h2 {
+    text-transform: uppercase;
+    max-width: 50px;
+    font-size: 2.2em;
+    font-weight: 700;
+    line-height: 1em;
+}
+
+#mini-banners .col-12 img {
+    height: 220px;
+    position: absolute;
+    right: 1em;
+    bottom: 1em;
+}
+
+#mini-banners .col-12 a {
+    font-weight: bold;
+    color: #FFF;
+    font-size: 0.8em;
+    transition: 0.5s;
+}
+
+#mini-banners .col-12 a:hover {
+    color: #101010;
+}
+
+#mini-banners #mini-banner-1 a:hover,
+#mini-banners #mini-banner-3 a:hover {
+    color: #C09578;
+}
+
+#mini-banners #mini-banner-3 a {
+    color: #101010;
+}
+
