adicionando css dos novos produtos

--- a/css/styles.css
+++ b/css/styles.css
@@ -335,3 +335,21 @@ body {
     align-items: center;
     background-color: #101010;
 }
+
+
+#new-products-banner h3 {
+    text-transform: uppercase;
+    font-weight: bold;
+    margin-bottom: 0.5em;
+    font-size: 2.5em;
+}
+
+#new-products .col-md-4 {
+    padding: 0;
+}
+
+#new-products .card img {
+    height: 150px;
+    width: 90px;
+    margin: 2em auto;
+}
